@@ -6,33 +6,3 @@
 .nemo-inactive-pane .view {
     background-color: shade(@theme_base_color, 0.9);
 }
-
-/* for nemo-cell-renderer-disk.c */
-
-.nemo-disk-renderer-bg {
-    border-radius: 1px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: shade(@theme_bg_color, .65);
-}
-
-.nemo-disk-renderer-bg row:selected {
-    border-radius: 1px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: shade(@theme_bg_color, 2.0);
-}
-
-.nemo-disk-renderer-fg {
-    border-radius: 1px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: shade(@theme_selected_bg_color, 1.0);
-}
-
-.nemo-disk-renderer-fg row:selected {
-    border-radius: 1px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: shade(@theme_fg_color, 2.0);
-}
